added the ability to patch with the patch component files

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,5 @@
 {
     "patches": [
-        {"theme": "st-dracula"},
-        {"alpha": "st-alpha"},
-        {"scrollback": "st-scrollback"}
+        {"alpha": "st-alpha"}
     ]
 }
